cross sections of tracers

--- a/maybe_delete/cast_processing.ipynb
+++ b/maybe_delete/cast_processing.ipynb
@@ -96,15 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_dfo_ctd(2018)\n",
-    "read_dfo_ctd(2019)\n",
-    "read_dfo_ctd(2020)\n",
-    "read_dfo_ctd(2021)\n",
-    "read_dfo_ctd(2017)\n",
+    "# read_dfo_ctd(2018)\n",
+    "# read_dfo_ctd(2019)\n",
+    "# read_dfo_ctd(2020)\n",
+    "# read_dfo_ctd(2021)\n",
+    "# read_dfo_ctd(2017)\n",
     "\n"
    ]
   },
