hourly timeseries script, tracers added

--- a/eval/currents.ipynb
+++ b/eval/currents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# first working with current and temperature mooring in barkley canyon\n",
-    "also has oxygen and salinity at a nearby meering if of interest for a timeseries later"
+    "# first working in barkley canyon\n",
+    "currents: scalar_1196714 <br>\n",
+    "ctd: scalar_1196717 <br>\n",
+    "oxygen: scalar_1196720"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -186,48 +188,165 @@
        "      <td>0.012996</td>\n",
        "      <td>-0.019497</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28969</th>\n",
+       "      <td>2018-07-22 13:00:00+00:00</td>\n",
+       "      <td>0.027203</td>\n",
+       "      <td>123.443139</td>\n",
+       "      <td>278.68</td>\n",
+       "      <td>48.3332</td>\n",
+       "      <td>-125.875583</td>\n",
+       "      <td>415.0</td>\n",
+       "      <td>0.011886</td>\n",
+       "      <td>-0.001045</td>\n",
+       "      <td>278.870744</td>\n",
+       "      <td>-0.022699</td>\n",
+       "      <td>0.014992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28970</th>\n",
+       "      <td>2018-07-22 13:20:00+00:00</td>\n",
+       "      <td>0.033734</td>\n",
+       "      <td>298.316543</td>\n",
+       "      <td>278.68</td>\n",
+       "      <td>48.3332</td>\n",
+       "      <td>-125.875583</td>\n",
+       "      <td>415.0</td>\n",
+       "      <td>0.011886</td>\n",
+       "      <td>-0.001045</td>\n",
+       "      <td>278.870744</td>\n",
+       "      <td>0.029698</td>\n",
+       "      <td>-0.016002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28971</th>\n",
+       "      <td>2018-07-22 13:40:00+00:00</td>\n",
+       "      <td>0.029069</td>\n",
+       "      <td>245.525326</td>\n",
+       "      <td>278.69</td>\n",
+       "      <td>48.3332</td>\n",
+       "      <td>-125.875583</td>\n",
+       "      <td>415.0</td>\n",
+       "      <td>0.011886</td>\n",
+       "      <td>-0.001045</td>\n",
+       "      <td>278.870744</td>\n",
+       "      <td>0.026457</td>\n",
+       "      <td>0.012043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28972</th>\n",
+       "      <td>2018-07-22 14:00:00+00:00</td>\n",
+       "      <td>0.069426</td>\n",
+       "      <td>297.974044</td>\n",
+       "      <td>278.70</td>\n",
+       "      <td>48.3332</td>\n",
+       "      <td>-125.875583</td>\n",
+       "      <td>415.0</td>\n",
+       "      <td>0.144040</td>\n",
+       "      <td>0.023490</td>\n",
+       "      <td>278.658491</td>\n",
+       "      <td>0.061314</td>\n",
+       "      <td>-0.032566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28973</th>\n",
+       "      <td>2018-07-22 14:20:00+00:00</td>\n",
+       "      <td>0.098478</td>\n",
+       "      <td>276.399837</td>\n",
+       "      <td>278.74</td>\n",
+       "      <td>48.3332</td>\n",
+       "      <td>-125.875583</td>\n",
+       "      <td>415.0</td>\n",
+       "      <td>0.144040</td>\n",
+       "      <td>0.023490</td>\n",
+       "      <td>278.658491</td>\n",
+       "      <td>0.097865</td>\n",
+       "      <td>-0.010977</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>28974 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 time (UTC)  current_speed_calculated (m s-1)  \\\n",
-       "0 2017-06-15 04:40:00+00:00                          0.104087   \n",
-       "1 2017-06-15 05:00:00+00:00                          0.117712   \n",
-       "2 2017-06-15 05:20:00+00:00                          0.077795   \n",
-       "3 2017-06-15 05:40:00+00:00                          0.060465   \n",
-       "4 2017-06-15 06:00:00+00:00                          0.023431   \n",
+       "                     time (UTC)  current_speed_calculated (m s-1)  \\\n",
+       "0     2017-06-15 04:40:00+00:00                          0.104087   \n",
+       "1     2017-06-15 05:00:00+00:00                          0.117712   \n",
+       "2     2017-06-15 05:20:00+00:00                          0.077795   \n",
+       "3     2017-06-15 05:40:00+00:00                          0.060465   \n",
+       "4     2017-06-15 06:00:00+00:00                          0.023431   \n",
+       "...                         ...                               ...   \n",
+       "28969 2018-07-22 13:00:00+00:00                          0.027203   \n",
+       "28970 2018-07-22 13:20:00+00:00                          0.033734   \n",
+       "28971 2018-07-22 13:40:00+00:00                          0.029069   \n",
+       "28972 2018-07-22 14:00:00+00:00                          0.069426   \n",
+       "28973 2018-07-22 14:20:00+00:00                          0.098478   \n",
        "\n",
-       "   current_direction_calculated (degree)  Temperature (K)  \\\n",
-       "0                             294.794648           280.34   \n",
-       "1                             296.291258           279.20   \n",
-       "2                             304.477991           279.04   \n",
-       "3                             320.724553           279.03   \n",
-       "4                             326.314422           279.05   \n",
+       "       current_direction_calculated (degree)  Temperature (K)  \\\n",
+       "0                                 294.794648           280.34   \n",
+       "1                                 296.291258           279.20   \n",
+       "2                                 304.477991           279.04   \n",
+       "3                                 320.724553           279.03   \n",
+       "4                                 326.314422           279.05   \n",
+       "...                                      ...              ...   \n",
+       "28969                             123.443139           278.68   \n",
+       "28970                             298.316543           278.68   \n",
+       "28971                             245.525326           278.69   \n",
+       "28972                             297.974044           278.70   \n",
+       "28973                             276.399837           278.74   \n",
        "\n",
-       "   latitude (degrees_north)  longitude (degrees_east)  depth (m)   model_u  \\\n",
-       "0                   48.3332               -125.875583      415.0 -0.026051   \n",
-       "1                   48.3332               -125.875583      415.0  0.000725   \n",
-       "2                   48.3332               -125.875583      415.0  0.000725   \n",
-       "3                   48.3332               -125.875583      415.0  0.000725   \n",
-       "4                   48.3332               -125.875583      415.0  0.009222   \n",
+       "       latitude (degrees_north)  longitude (degrees_east)  depth (m)  \\\n",
+       "0                       48.3332               -125.875583      415.0   \n",
+       "1                       48.3332               -125.875583      415.0   \n",
+       "2                       48.3332               -125.875583      415.0   \n",
+       "3                       48.3332               -125.875583      415.0   \n",
+       "4                       48.3332               -125.875583      415.0   \n",
+       "...                         ...                       ...        ...   \n",
+       "28969                   48.3332               -125.875583      415.0   \n",
+       "28970                   48.3332               -125.875583      415.0   \n",
+       "28971                   48.3332               -125.875583      415.0   \n",
+       "28972                   48.3332               -125.875583      415.0   \n",
+       "28973                   48.3332               -125.875583      415.0   \n",
        "\n",
-       "    model_v     model_t         u         v  \n",
-       "0  0.082908  278.724369  0.094491 -0.043650  \n",
-       "1  0.064490  278.695665  0.105535 -0.052138  \n",
-       "2  0.064490  278.695665  0.064129 -0.044039  \n",
-       "3  0.064490  278.695665  0.038277 -0.046807  \n",
-       "4  0.018485  278.654139  0.012996 -0.019497  "
+       "        model_u   model_v     model_t         u         v  \n",
+       "0     -0.026051  0.082908  278.724369  0.094491 -0.043650  \n",
+       "1      0.000725  0.064490  278.695665  0.105535 -0.052138  \n",
+       "2      0.000725  0.064490  278.695665  0.064129 -0.044039  \n",
+       "3      0.000725  0.064490  278.695665  0.038277 -0.046807  \n",
+       "4      0.009222  0.018485  278.654139  0.012996 -0.019497  \n",
+       "...         ...       ...         ...       ...       ...  \n",
+       "28969  0.011886 -0.001045  278.870744 -0.022699  0.014992  \n",
+       "28970  0.011886 -0.001045  278.870744  0.029698 -0.016002  \n",
+       "28971  0.011886 -0.001045  278.870744  0.026457  0.012043  \n",
+       "28972  0.144040  0.023490  278.658491  0.061314 -0.032566  \n",
+       "28973  0.144040  0.023490  278.658491  0.097865 -0.010977  \n",
+       "\n",
+       "[28974 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['u'], df['v'] = math_wind(df['current_speed_calculated (m s-1)'], df['current_direction_calculated (degree)'])\n",
-    "df.head()"
+    "df"
    ]
   },
   {
@@ -324,6 +443,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Endeavour North\n",
+    "curent: scalar_1200222\n",
+    "ctd: scalar_1200219 \n"
+   ]
   }
  ],
  "metadata": {
